// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Field renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-size: 16px;
}

.emotion-0>th,
.emotion-0>td {
  padding: 11px 5px 12px;
  text-align: left;
  vertical-align: baseline;
}

<table>
    <tbody>
      <tr
        class="emotion-0"
      >
        <th>
          Returns:
        </th>
        <td>
          A JSON Web Token string encoded for the provided payload.
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`FieldList renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-spacing: 0;
  font-size: 13px;
  line-height: 24px;
  margin: 24px 0;
  max-width: 100%;
}

.emotion-0 tbody {
  vertical-align: top;
}

.emotion-1 {
  font-size: 16px;
}

.emotion-1>th,
.emotion-1>td {
  padding: 11px 5px 12px;
  text-align: left;
  vertical-align: baseline;
}

<table
    class="emotion-0"
  >
    <colgroup>
      <col
        class="field-name"
      />
      <col
        class="field-body"
      />
    </colgroup>
    <tbody>
      <tr
        class="emotion-1"
      >
        <th>
          Returns:
        </th>
        <td>
          A JSON Web Token string encoded for the provided payload.
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
